fixed overlap in header

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -4,7 +4,7 @@ body > header {
   border-right: 4px solid $subtitle-color;
   text-align: center;
   h1 {
-  	position: absolute;
+    position: relative;
     //display: inline-block;
     font-weight: normal;
     top: 6.5em;
